Update project for production: README, Deployment Guide, CORS config, env templates